--- a/public/stylesheets/simple-sidebar.css
+++ b/public/stylesheets/simple-sidebar.css
@@ -96,6 +96,20 @@
     background: none;
 }
 
+.gs-bg-class {
+		position: relative;
+		padding: 10px 15px 15px;
+		margin: 0 -15px 15px;
+		border-style: solid;
+		border-width: 1px 0;
+		border-color: #e5e5e5 #eee #eee;
+		box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
+	}
+	
+.gs-bg-class p{
+	  padding: 10px;
+}
+
 @media(min-width:768px) {
     #wrapper {
         padding-left: 250px;
@@ -122,4 +136,14 @@
         position: relative;
         margin-right: 0;
     }
+	
+	.gs-bg-class {
+		background-color: #fff;
+		border-color: #ddd;
+		border-width: 1px;
+		border-radius: 4px 4px 0 0;
+		box-shadow: none;
+		padding: 15;
+	}
+	
 }
