--- a/views/index.jade
+++ b/views/index.jade
@@ -2,13 +2,10 @@ extends layout
 
 
 block content
+	a(href='#menu-toggle', class='glyphicon glyphicon-menu-hamburger	', id='menu-toggle')
+	
+	script(type='text/babel' src='/javascripts/app.js')
+	
 	#page-content-wrapper
-		a(href='#menu-toggle', class='btn btn-default', id='menu-toggle') Toggle Menu
-		div.container-fluid
-			div.row
-				div.col-lg-12
-					h1 Simple Sidebar
-					p This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.
-					p Make sure to keep all page content within the 
-						code #page-content-wrapper
+	
 					
