--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
   
 	title= title
 	
-	link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+	link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
 	link(rel='stylesheet', href='/stylesheets/simple-sidebar.css')
 	
 	
@@ -35,9 +35,14 @@ html
 	
 			block content
 
-		script(type='text/javascript' src='/javascripts/jquery.js')
-		script(type='text/javascript' src='/javascripts/bootstrap.min.js')
-	
+		
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.min.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.min.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js')
+		script(type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
+		
+		
 		script(type='text/javascript').
 			$("#menu-toggle").click(function(e) {
 				e.preventDefault();
