--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,17 @@
-extends layout
-
-block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+doctype html
+html
+	head
+		meta(charset='utf-8')
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
+		meta(name='description',content='Admin Genesis')
+		meta(name='author',content='JuLiAn')
+  
+		title= title
+		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/stylesheets/simple-sidebar.css')
+	
+	body
+		h1= message
+		h2= error.status
+		pre #{error.stack}
