--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,28 @@
-extends layout
-
-
-block content
-	a(href='#menu-toggle', class='glyphicon glyphicon-menu-hamburger	', id='menu-toggle')
+doctype html
+html
+	head
+		meta(charset='utf-8')
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
+		meta(name='description',content='Admin Genesis')
+		meta(name='author',content='JuLiAn')
+  
+	title= title
 	
-	script(type='text/babel' src='/javascripts/app.js')
+	link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
+	link(rel='stylesheet', href='/stylesheets/simple-sidebar.css')
 	
-	#page-content-wrapper
+	body
 	
-					
+		#app
+		
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.min.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.min.js')
+		script(type='text/javascript' src='https://cdn.jsdelivr.net/refluxjs/0.2.11/reflux.min.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react-router/2.0.1/ReactRouter.min.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js')
+		script(type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
+		
+		script(type='text/babel' src='/javascripts/app.js')
+		
