--- a/views/index.jade
+++ b/views/index.jade
@@ -11,18 +11,18 @@ html
 	
 	link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
 	link(rel='stylesheet', href='/stylesheets/simple-sidebar.css')
-	
+
 	body
 	
 		#app
 		
-		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.min.js')
-		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.min.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js')
 		script(type='text/javascript' src='https://cdn.jsdelivr.net/refluxjs/0.2.11/reflux.min.js')
 		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react-router/2.0.1/ReactRouter.min.js')
 		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js')
 		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js')
 		script(type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
 		
-		script(type='text/babel' src='/javascripts/app.js')
+		script(type='text/javascript' src='/javascripts/app.js')
 		
