Initialisation de la popup Service Editor
Popup de création / modification de services

--- a/public/stylesheets/simple-sidebar.css
+++ b/public/stylesheets/simple-sidebar.css
@@ -14,27 +14,26 @@ body{
 	font-size: 12px;
 }
 
-
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
   padding-right: 5px;
   padding-left: 5px;
 }
 
 .panel-heading {
-  padding: 5px 8px;
+  padding: 5px 2px 5px 2px;
 }
 
 .panel{
   margin-bottom:5px; 
   border-width: 1px 4px 4px 1px;
  /* background-color:#34a;*/
- 
 }
 
 .panel-body{
    padding: 5px;
    overflow-y: auto;
-   height:26vh;
+	 overflow-x: auto;
+   height:27vh;
 }
 
 table{
@@ -48,7 +47,21 @@ table{
 }
 
 
+.form-group{
+	padding-right:3px;
+	padding-left:3px;
+}
+
+.form-control {
+	padding:0;
+}
+
 /* CUSTOM CSS */ 
+
+.searchbox{
+	height: 17px;
+	font-size: 12px;
+}
 
 .template{
 	font-family: Arial;
@@ -72,6 +85,13 @@ table{
 	padding-left:5px;
 }
 
+.btn-glyph-only{
+	-webkit-appearance: none;
+	outline: none;
+	border: 0;
+	background: transparent;
+}
+
 #grid{
 	height: 100%;
 }
@@ -87,16 +107,16 @@ table{
 }
 
 #wrapper.toggled {
-    padding-left: 170px;
+    padding-left: 150px;
 }
 
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
-    left: 170px;
+    left: 150px;
     width: 0;
     height: 100%;
-    margin-left: -170px;
+    margin-left: -150px;
     overflow-y: auto;
     background: #000;
     -webkit-transition: all 0.5s ease;
@@ -107,7 +127,7 @@ table{
 
 
 #wrapper.toggled #sidebar-wrapper {
-    width:170px;
+    width:150px;
 }
 
 #page-content-wrapper {
@@ -127,7 +147,7 @@ table{
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 170px;
+    width: 150px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -194,7 +214,7 @@ table{
 
 @media(min-width:768px) {
     #wrapper {
-        padding-left: 170px;
+        padding-left: 150px;
     }
 
     #wrapper.toggled {
@@ -202,7 +222,7 @@ table{
     }
 
     #sidebar-wrapper {
-        width: 170px;
+        width: 150px;
     }
 
     #wrapper.toggled #sidebar-wrapper {
