--- a/public/stylesheets/simple-sidebar.css
+++ b/public/stylesheets/simple-sidebar.css
@@ -56,6 +56,11 @@ table{
 	padding:0;
 }
 
+.modal-body{
+    max-height: calc(100vh - 200px);
+    overflow-y: auto;
+}
+
 /* CUSTOM CSS */ 
 
 .searchbox{
@@ -78,11 +83,19 @@ table{
 
 .btn-remove{
 	color:#d9534f;
+	-webkit-appearance: none;
+	outline: none;
+	border: 0;
+	background: transparent;
 }
 
 .btn-add{
 	color:#333;
-	padding-left:5px;
+	/*padding-left:5px;*/
+	-webkit-appearance: none;
+	outline: none;
+	border: 0;
+	background: transparent;
 }
 
 .btn-glyph-only{
