--- a/views/index.jade
+++ b/views/index.jade
@@ -22,9 +22,9 @@ html
 		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react-router/2.0.1/ReactRouter.min.js')
 		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js')
 		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js')
+		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.29.2/react-bootstrap.min.js')
 		script(type='text/javascript' src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
+		
 		script(type='text/javascript' src='/javascripts/validator.js')
-		
-		
 		script(type='text/javascript' src='/javascripts/app.js')
 		
