--- a/public/stylesheets/simple-sidebar.css
+++ b/public/stylesheets/simple-sidebar.css
@@ -8,13 +8,67 @@
 
 /* OVERRIDE BOOTSTRAP CSS */
 
-
 body{
 	font-family: "Tahoma Neue","Helvetica Neue",Helvetica,Arial,sans-serif;
 	font-size: 12px;
 }
 
-.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+.nav-pills{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.se_step{
+    border-color: #aaa;
+    border-style: solid ;
+    border-width: 0 1px 0 1px;
+    padding-left: 5px;
+    padding-right: 5px;
+    min-height: 300px;
+}
+
+.rowKeys{
+  margin-left:15px;
+  margin-right:15px;
+}
+
+li.placeholder { background: rgb(255,240,120);}
+li.placeholder:before {
+  content: "Drop here"; color: rgb(225,210,90); line-height:2.2;
+}
+.ulOrderable {
+  list-style: none;
+  border-color: #aaa;
+  border-style: solid;
+  border-width: 1px;
+  padding:0;
+  margin:10px;
+}
+.liOrderable {
+  padding: 5px;
+  background:#eee;
+  cursor: pointer; 
+  cursor: hand;
+}
+
+
+.recap{
+    font-size: 12px;
+    padding-left:5px;
+}
+/*
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5,
+ .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12,
+  .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9,
+   .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5,
+    .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12,
+     .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+  padding-right: 5px;
+  padding-left: 5px;
+}*/
+
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5,
+ .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9{
   padding-right: 5px;
   padding-left: 5px;
 }
@@ -32,7 +86,7 @@ body{
 .panel-body{
    padding: 5px;
    overflow-y: auto;
-	 overflow-x: auto;
+   overflow-x: auto;
    height:27vh;
 }
 
@@ -59,6 +113,12 @@ table{
 .modal-body{
     max-height: calc(100vh - 200px);
     overflow-y: auto;
+    padding-top:0px;
+    padding-left:0px;
+}
+
+.modal-lg {
+  width: 85vw;
 }
 
 /* CUSTOM CSS */ 
