--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -25,6 +25,11 @@ body{
   right: 0;
 }
 
+.profil{
+  padding-top:4px;
+  padding-right:15px;
+}
+
 .notify-item {
   width: 250px;
   margin: 5px 10px;
@@ -248,6 +253,7 @@ table{
   margin-left:-15px;
   margin-right:-15px;
   margin-bottom:10px;
+  color:#FFF;
 }
 
 #sidebar-wrapper {
