Affichage des templates de façon générique

--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -180,8 +180,8 @@ table{
 }
 
 .template{
-    font-family: Arial;
-    font-size: 10px;
+    /*font-family: Arial;
+    font-size: 12px;*/
 }
 
 .separator{
