--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -162,7 +162,7 @@ table{
     font-size: 12px;
     line-height: 1.5;
     border-radius: 3px;
-    width:120px;
+    max-width:120px;
 }
 
 .form-group-xs .form-control-feedback{
